--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,98 @@
-﻿body {
-  display: flex;
+﻿@media (min-width: 319px) {
+  * {
+    color: #1d2d44;
+  }
+  body {
+    background-color: #3e5c76;
+    margin: 0px;
+    padding-top: 16px;
+    padding-left: 8px;
+    padding-right: 8px;
+    max-width: 767px;
+    margin: 0 auto;
+  }
+  #result-holder {
+    padding-bottom: 16px;
+  }
+
+  #result {
+    width: 100%;
+    box-sizing: border-box;
+    height: 88px;
+    font-size: 26px;
+    border: none;
+    border-radius: 5px;
+    padding-left: 4px;
+    padding-right: 4px;
+    text-align: center;
+    background-color: #f0ebd8;
+  }
+
+  #calculator {
+    justify-content: center;
+  }
+
+  .curencyrow {
+    padding-bottom: 10px;
+  }
+  .calcrow {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+    width: 100%;
+  }
+
+  .cell {
+    padding-bottom: 8px;
+  }
+
+  .cell input[type="button"] {
+    min-width: 40px;
+    padding: 10px;
+    width: 100%;
+    font-size: 28px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .textareaha {
+    width: 100%;
+    box-sizing: border-box;
+    max-height: 200px;
+    background-color: #f0ebd8;
+    opacity: 50%;
+    font-size: 20px;
+    line-height: 1.5;
+  }
+  p {
+    color: white;
+    margin-bottom: 4px;
+    font-size: 20px;
+  }
 }
 
-#calculator {
-  width: 300px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 5px;
-  margin-right: auto;
-  margin-left: auto;
+@media (min-width: 768px) {
+  .cell input[type="button"] {
+    min-width: 60px;
+    padding: 16px;
+    width: 100%;
+    font-size: 32px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  #result {
+    width: 100%;
+    box-sizing: border-box;
+    height: 128px;
+    font-size: 36px;
+    border: none;
+    border-radius: 5px;
+    padding-left: 4px;
+    padding-right: 4px;
+    text-align: center;
+  }
 }
-
-.cell {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.cell input[type="button"] {
-  width: 100%;
-  font-size: 27px;
-  font-weight: bold;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-input[type="text"] {
-  width: 100%;
-  height: 90%;
-  font-size: 25px;
-}
-
-input[type="button"] {
-  width: 100%;
-  height: 100%;
-}
-
-#result-holder {
-  grid-column: span 4;
-}
+/*
+@media (min-width: 1280px) {
+} */
